@@ -9,19 +9,21 @@ package org.opendaylight.yangtools.yang.xpath.impl;
 
 import static java.util.Objects.requireNonNull;
 import static org.opendaylight.yangtools.yang.xpath.impl.ParseTreeUtils.getChild;
+import static org.opendaylight.yangtools.yang.xpath.impl.ParseTreeUtils.getToken;
 import static org.opendaylight.yangtools.yang.xpath.impl.ParseTreeUtils.illegalShape;
-import static org.opendaylight.yangtools.yang.xpath.impl.ParseTreeUtils.verifyToken;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Set;
 import javax.xml.xpath.XPathExpressionException;
 import org.antlr.v4.runtime.CharStreams;
 import org.antlr.v4.runtime.CommonTokenStream;
 import org.antlr.v4.runtime.tree.ParseTree;
+import org.eclipse.jdt.annotation.Nullable;
 import org.opendaylight.yangtools.yang.common.UnresolvedQName;
 import org.opendaylight.yangtools.yang.common.YangNamespaceContext;
+import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierLexer;
 import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser;
 import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.EqQuotedStringContext;
 import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.InstanceIdentifierContext;
@@ -33,8 +35,6 @@ import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.Node
 import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.PathArgumentContext;
 import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.PosContext;
 import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.PredicateContext;
-import org.opendaylight.yangtools.yang.xpath.antlr.instanceIdentifierParser.QuotedStringContext;
-import org.opendaylight.yangtools.yang.xpath.antlr.xpathLexer;
 import org.opendaylight.yangtools.yang.xpath.api.YangBinaryOperator;
 import org.opendaylight.yangtools.yang.xpath.api.YangExpr;
 import org.opendaylight.yangtools.yang.xpath.api.YangLiteralExpr;
@@ -54,13 +54,18 @@ abstract class InstanceIdentifierParser {
         }
 
         @Override
-        YangQNameExpr createExpr(final String prefix, final String localName) {
-            return YangQNameExpr.of(UnresolvedQName.Qualified.of(prefix, localName));
+        YangQNameExpr createExpr(final String prefix, @Nullable final String localName) {
+            return YangQNameExpr.of(qnameOf(prefix, localName));
         }
 
         @Override
-        QNameStep createChildStep(final String prefix, final String localName, final Collection<YangExpr> predicates) {
-            return YangXPathAxis.CHILD.asStep(UnresolvedQName.Qualified.of(prefix, localName), predicates);
+        QNameStep createChildStep(final String prefix, @Nullable final String localName,
+                final Collection<YangExpr> predicates) {
+            return YangXPathAxis.CHILD.asStep(qnameOf(prefix, localName), predicates);
+        }
+
+        private static UnresolvedQName qnameOf(final String first, final @Nullable String second) {
+            return second == null ? UnresolvedQName.Unqualified.of(first) : UnresolvedQName.Qualified.of(first, second);
         }
     }
 
@@ -73,16 +78,19 @@ abstract class InstanceIdentifierParser {
         }
 
         @Override
-        QNameStep createChildStep(final String prefix, final String localName, final Collection<YangExpr> predicates) {
-            return YangXPathAxis.CHILD.asStep(namespaceContext.createQName(prefix, localName), predicates);
+        YangQNameExpr createExpr(final String prefix, @Nullable final String localName) {
+            return localName == null
+                    ? YangQNameExpr.of(UnresolvedQName.Unqualified.of(prefix))
+                    : YangQNameExpr.of(namespaceContext.createQName(prefix, localName));
         }
-
 
         @Override
-        YangQNameExpr createExpr(final String prefix, final String localName) {
-            return YangQNameExpr.of(namespaceContext.createQName(prefix, localName));
+        QNameStep createChildStep(final String prefix, @Nullable final String localName,
+                final Collection<YangExpr> predicates) {
+            return localName == null
+                    ? YangXPathAxis.CHILD.asStep(UnresolvedQName.Unqualified.of(prefix), predicates)
+                    : YangXPathAxis.CHILD.asStep(namespaceContext.createQName(prefix, localName), predicates);
         }
-
     }
 
     private final YangXPathMathSupport mathSupport;
@@ -92,7 +100,7 @@ abstract class InstanceIdentifierParser {
     }
 
     final Absolute interpretAsInstanceIdentifier(final YangLiteralExpr expr) throws XPathExpressionException {
-        final xpathLexer lexer = new xpathLexer(CharStreams.fromString(expr.getLiteral()));
+        final instanceIdentifierLexer lexer = new instanceIdentifierLexer(CharStreams.fromString(expr.getLiteral()));
         final instanceIdentifierParser parser = new instanceIdentifierParser(new CommonTokenStream(lexer));
         final CapturingErrorListener listener = new CapturingErrorListener();
         lexer.removeErrorListeners();
@@ -108,7 +116,6 @@ abstract class InstanceIdentifierParser {
         for (int i = 1; i < length; i += 2) {
             steps.add(parsePathArgument(getChild(id, PathArgumentContext.class, i)));
         }
-
         return YangLocationPath.absolute(steps);
     }
 
@@ -119,11 +126,11 @@ abstract class InstanceIdentifierParser {
     private QNameStep parsePathArgument(final PathArgumentContext expr) {
         final NodeIdentifierContext childExpr = getChild(expr, NodeIdentifierContext.class, 0);
         final String prefix = verifyIdentifier(childExpr, 0);
-        final String localName = verifyIdentifier(childExpr, 2);
+        final String localName = childExpr.getChildCount() == 1 ? null : verifyIdentifier(childExpr, 1);
 
         switch (expr.getChildCount()) {
             case 1:
-                return createChildStep(prefix, localName, ImmutableSet.of());
+                return createChildStep(prefix, localName, Set.of());
             case 2:
                 return createChildStep(prefix, localName, parsePredicate(getChild(expr, PredicateContext.class, 1)));
             default:
@@ -134,13 +141,13 @@ abstract class InstanceIdentifierParser {
     private Collection<YangExpr> parsePredicate(final PredicateContext expr) {
         final ParseTree first = expr.getChild(0);
         if (first instanceof LeafListPredicateContext) {
-            return ImmutableSet.of(YangBinaryOperator.EQUALS.exprWith(YangLocationPath.self(),
-                parseEqStringValue(getChild(((LeafListPredicateContext) first)
-                    .getChild(LeafListPredicateExprContext.class, 0), EqQuotedStringContext.class, 1))));
+            return Set.of(YangBinaryOperator.EQUALS.exprWith(YangLocationPath.self(),
+                    parseEqStringValue(getChild(((LeafListPredicateContext) first)
+                            .getChild(LeafListPredicateExprContext.class, 0), EqQuotedStringContext.class, 1))));
         } else if (first instanceof PosContext) {
-            return ImmutableSet.of(YangBinaryOperator.EQUALS.exprWith(FunctionSupport.POSITION,
-                mathSupport.createNumber(((PosContext) first).getToken(instanceIdentifierParser.PositiveIntegerValue, 0)
-                    .getText())));
+            return Set.of(YangBinaryOperator.EQUALS.exprWith(FunctionSupport.POSITION,
+                    mathSupport.createNumber(((PosContext) first).getToken(instanceIdentifierParser.POS_INDEX, 0)
+                            .getText())));
         }
 
         final int length = expr.getChildCount();
@@ -149,24 +156,33 @@ abstract class InstanceIdentifierParser {
             final KeyPredicateExprContext pred = getChild(expr, KeyPredicateContext.class, i)
                     .getChild(KeyPredicateExprContext.class, 0);
             ret.add(YangBinaryOperator.EQUALS.exprWith(
-                createChildExpr(getChild(pred, NodeIdentifierContext.class, 0)),
-                parseEqStringValue(getChild(pred, EqQuotedStringContext.class, 1))));
-
+                    createChildExpr(getChild(pred, NodeIdentifierContext.class, 0)),
+                    parseEqStringValue(getChild(pred, EqQuotedStringContext.class, 1))));
         }
-
         return ret;
     }
 
     private YangQNameExpr createChildExpr(final NodeIdentifierContext expr) {
-        return createExpr(verifyIdentifier(expr, 0), verifyIdentifier(expr, 2));
+        final String prefix = verifyIdentifier(expr, 0);
+        final String localName = expr.getChildCount() == 1 ? null : verifyIdentifier(expr, 1);
+        return createExpr(prefix, localName);
     }
 
-    private static String verifyIdentifier(final NodeIdentifierContext expr, final int child) {
-        return verifyToken(expr, child, instanceIdentifierParser.Identifier).getText();
+    private static String verifyIdentifier(final NodeIdentifierContext expr, final int occurrence) {
+        return getToken(expr, instanceIdentifierParser.IDENTIFIER, occurrence).getText();
     }
 
     private static YangLiteralExpr parseEqStringValue(final EqQuotedStringContext expr) {
-        return YangLiteralExpr.of(verifyToken(getChild(expr, QuotedStringContext.class, expr.getChildCount() - 1), 1,
-            instanceIdentifierParser.STRING).getText());
+        final String quotedString = getToken(expr, instanceIdentifierParser.QUOTED_STRING, 0).getText();
+        return YangLiteralExpr.of(unQuoteString(quotedString));
+    }
+
+    private static String unQuoteString(String quotedString) {
+        if (quotedString.length() == 2) {
+            return ""; // quotes only
+        }
+        return quotedString.startsWith("\"")
+                ? quotedString.replaceAll("^\"|\"$", "").replace("\\\"", "\"")
+                : quotedString.replaceAll("^'|'$", "").replace("\\'", "'");
     }
 }
